--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,3 +11,22 @@ html{
     font-family: 'Be Vietnam Pro', sans-serif;
 }
 }
+#carousel .swiper-pagination{
+    position: static;
+    margin-top: 10px;
+ 
+}
+
+.mySwiper .swiper-pagination-bullet {
+    width: 8px;
+    height: 8px;
+    background-color: white;
+    border-radius: 50%;
+    border: 1px solid hsl(12, 88%, 59%);
+    opacity:1;
+  }
+  
+  .mySwiper .swiper-pagination-bullet-active {
+    color: #fff;
+    background: hsl(12, 88%, 59%);
+  }
