--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 @layer base{
 html{
     font-family: 'Be Vietnam Pro', sans-serif;
-}
+    }
 }
 #carousel .swiper-pagination{
     position: static;
@@ -30,3 +30,29 @@ html{
     color: #fff;
     background: hsl(12, 88%, 59%);
   }
+
+  html{
+    background-image: url('../public/images/bg-tablet-pattern.svg'),url('../public/images/bg-tablet-pattern.svg');
+    background-repeat: no-repeat;
+    background-size: 110%;
+    background-position:right -250px top 500px, right -70px top -70px;
+  }
+
+
+@media (min-width:1024px){
+  html{
+    background-image: url('../public/images/bg-tablet-pattern.svg'),url('../public/images/bg-tablet-pattern.svg');
+    background-repeat: no-repeat;
+    background-size: 60%;
+    background-position: -90% 45%, right -35% top;
+  }
+}
+
+@media (min-width:1360px){
+  html{
+    background-image: url('../public/images/bg-tablet-pattern.svg'),url('../public/images/bg-tablet-pattern.svg');
+    background-repeat: no-repeat;
+    background-size:auto;
+    background-position: -70% 55%, right -10% top -10%;
+  }
+}
